overflow trade fixed

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,8 +5,8 @@
   font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
   scroll-behavior: smooth;
-  outline: 1px solid limegreen;
-  background-color: rgb(0 100 0 / 0.5);
+  // outline: 1px solid limegreen;
+  // background-color: rgb(0 100 0 / 0.5);
 }
 
 body {
@@ -14,7 +14,6 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: bisque;
 }
 
 .transparent {
